infrastructure/observability/loki/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki
  labels:
    app.kubernetes.io/component: networking
    app.kubernetes.io/name: loki
    app.kubernetes.io/part-of: observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: single-binary
      app.kubernetes.io/instance: loki
      app.kubernetes.io/name: loki
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: alloy
              app.kubernetes.io/instance: alloy
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
              app.kubernetes.io/instance: grafana
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 3100
          protocol: TCP
